# register_manager

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  bunfig.toml  example.xlsx  example.xml  package.json  test-api.ts  tsconfig.json
.github/workflows/: ci-app.yml  ci-plugin.yml  ci-python-plugin.yml  release-app.yml  release-plugin.yml  release-python-plugin.yml
docs/: api_compliance_analysis.md  ipxact-import.md  plugin-development.md  review.md
examples/: EXCEL_FORMAT.md  PLUGIN_COMPARISON.md
examples/parser_plugin_python/: .gitignore  README.md  build.py  pyproject.toml  wrapper.js
examples/parser_plugin_python/src/parser_plugin_python/: __init__.py  parser.py
examples/parser_plugin_python/tests/: __init__.py  test_parser.py
examples/parser_plugin_rust/: .gitignore  Cargo.toml  README.md
examples/parser_plugin_rust/src/: parser.rs
examples/parser_plugin_rust/tests/: parse_excel.rs
register_excel_parser/: Cargo.toml  README.md
register_excel_parser/src/: error.rs  excel.rs  lib.rs  parser.rs  schema.rs  types.rs
register_excel_parser/tests/: parse_excel.rs
